Fix overflow

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -2,8 +2,8 @@ body {
     border-top: solid 4px #33FF99;
 
     font-family: Quattrocento, Cochin, Georgia, Times, Times New Roman, serif;
-    font-size: 20px;
-    line-height: 2em;
+    font-size: 18px;
+    line-height: 1.75em;
 }
 
 *:focus {
@@ -86,6 +86,10 @@ p {
 
 .site__header {
     text-align: center;
+}
+
+a.site__header__logo {
+    margin: 0;
 }
 
 .site__header__logo {
